# leptos-production-starter

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  flake.nix  package-lock.json  package.json  shell.nix  tailwind.config.js
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: tailwind.css
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: auth.rs  lib.rs  models.rs  ports.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  security.rs  state.rs  telemetry.rs
crates/server/src/handlers/: auth.rs  health.rs  mod.rs  pages.rs  public.rs  users.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  dto.rs  error.rs  lib.rs  types.rs
infra/docker/: Dockerfile  compose.dev.yml
migrations/: 20240101000000_init.sql
