[workspace]
members = [
    "crates/app",
    "crates/server",
    "crates/shared",
    "crates/db",
    "crates/domain",
    "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Your Team <dev@example.com>"]

[workspace.dependencies]
# Web and SSR
leptos = { version = "0.8.15", default-features = false }
leptos_router = { version = "0.8.11", default-features = false }
leptos_meta = { version = "0.8.5", default-features = false }
leptos_axum = { version = "0.8.7", default-features = false }
leptos_config = "0.8.8"
axum = { version = "0.8", features = ["macros", "http1", "http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "set-header", "sensitive-headers", "request-id", "fs"] }
hyper = { version = "1", features = ["full"] }
http = "1"

# Async
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
async-trait = "0.1"

# Serialization / validation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
validator = { version = "0.16", features = ["derive"] }

# Data / security
uuid = { version = "1", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
time = { version = "0.3", features = ["macros", "serde"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
sha2 = "0.10"
jsonwebtoken = "9"
base64 = "0.21"

# Persistence
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "json", "macros"] }
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# Config / errors
config = "0.13"
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
once_cell = "1"
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "grpc-tonic"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.11"

# Testing
serial_test = "2"

[[workspace.metadata.leptos]]
name = "app"
output-name = "app"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "assets/tailwind.css"
assets-dir = "assets"
sass-file = ""
lib-package = "app"
bin-package = "server"
hydrate-package = "app"
lib-profile-release = "wasm-release"
watch-additional = ["assets"]
lib-features = ["hydrate"]
tailwind-input-file = "assets/tailwind.css"
tailwind-config-file = "tailwind.config.js"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[patch.crates-io]
home = { path = "vendor/home" }
base64ct = { path = "vendor/base64ct" }
