[package]
name = "app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "app-hydrate"
path = "src/main.rs"
required-features = ["hydrate"]

[features]
default = ["hydrate"]
csr = ["leptos/csr"]
hydrate = [
    "leptos/hydrate",
    "leptos/islands",
    "console_error_panic_hook",
    "wasm-bindgen",
]
ssr = [
    "leptos/ssr",
    "dep:leptos_meta",
    "leptos_meta/ssr",
    "dep:leptos_axum",
    "dep:http",
]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
leptos = { workspace = true, default-features = false }
leptos_axum = { workspace = true, optional = true, default-features = false }
leptos_meta = { workspace = true, optional = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
http = { workspace = true, optional = true }
thiserror = { workspace = true }
wasm-bindgen = { version = "0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Headers", "Location", "Request", "RequestCredentials", "RequestInit", "Response", "Storage", "Window"] }
