[package]
name = "server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
app = { path = "../app", default-features = false, features = ["ssr"] }
argon2 = { workspace = true }
async-trait = { workspace = true }
any_spawner = { version = "0.3", features = ["tokio"] }
axum = { workspace = true }
axum-extra = { version = "0.12", features = ["cookie"] }
chrono = { workspace = true }
config = { workspace = true }
db = { path = "../db" }
dotenvy = { workspace = true }
domain = { path = "../domain" }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
jsonwebtoken = { workspace = true }
leptos = { workspace = true, default-features = false, features = ["ssr"] }
leptos_axum = { workspace = true, default-features = true }
leptos_config = { workspace = true }
leptos_meta = { workspace = true, default-features = false, features = ["ssr"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
redis = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
shared = { path = "../shared" }
sqlx = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
cookie = "0.18"
